@@ -602,19 +602,28 @@ itcl::class Retr& {
     }
 
     method handle_all_none {prefix all} {
+        global sn_scopes
         upvar #0 ${this}-exclusive excl
-        ::set excl 0
+        set excl 0
         ${this}-mixer.button_0 config -state normal
-        foreach v [::info globals ${prefix}-*] {
+        foreach sc ${sn_scopes} {
             if {${all}} {
-                set sc [string range ${v} [expr [string last "-" ${v}] + 1] end]
-                if {[::info commands paf_db_${sc}] == ""} {
-                    set sc ""
+                if {[info commands paf_db_${sc}] == ""} {
+                    set val ""
+                } else {
+                    set val ${sc}
                 }
             } else {
-                set sc ""
+                set val ""
             }
-            uplevel #0 "set ${v} [list ${sc}]"
+            set ::${prefix}-${sc} ${val}
+        }
+
+        # Note: The "files" option is not selected by all but
+        # it is deselected by none.
+
+        if {!$all} {
+            set ::${prefix}-files ""
         }
     }
 
